Fixed bear logo on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Merienda&family=Neucha&display=swap");
 
+body {
+  font-size: 16px;
+}
+
 #page-header {
   background-image: url("../images/header-background.jpg");
   background-size: cover;
@@ -34,5 +38,11 @@ h3 {
   #bear-logo {
     transform: unset;
     max-width: 250px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  #header-content {
+    text-align: center;
   }
 }
